hphp/hack/test/typecheck/is_expression/primitive.php.exp
File "primitive.php", line 15, characters 15-16:
Invalid argument (Typing[4110])
  File "primitive.php", line 22, characters 22-25:
  This is a bool
  File "primitive.php", line 3, characters 15-19:
  It is incompatible with a mixed value
File "primitive.php", line 16, characters 16-17:
Invalid argument (Typing[4110])
  File "primitive.php", line 23, characters 23-27:
  This is a float
  File "primitive.php", line 3, characters 15-19:
  It is incompatible with a mixed value
File "primitive.php", line 17, characters 14-15:
Invalid argument (Typing[4110])
  File "primitive.php", line 24, characters 21-23:
  This is an int
  File "primitive.php", line 3, characters 15-19:
  It is incompatible with a mixed value
File "primitive.php", line 18, characters 19-20:
Invalid argument (Typing[4110])
  File "primitive.php", line 25, characters 26-33:
  This is a resource
  File "primitive.php", line 3, characters 15-19:
  It is incompatible with a mixed value
File "primitive.php", line 19, characters 17-18:
Invalid argument (Typing[4110])
  File "primitive.php", line 26, characters 24-29:
  This is a string
  File "primitive.php", line 3, characters 15-19:
  It is incompatible with a mixed value
